auth-gateway.yml
apiVersion: v1
kind: Pod
metadata:
  name: auth-gateway
  namespace: beebox-auth
spec:
  nodeselector:
   external-auth-services: "true"
 containers:
 - name: nginx
   image: nginx:1.19.1
   ports:
   - containerPort: 80
