dnstest-pods.yml
apiVersion: v1
kind: Pod
metadata:
  name: beebox-dnstest
spec:
  containers:
    - name: beebox
      image: radial/busyboxplus:curl
      command: ['sh', '-c', 'while true; do sleep 3600; done']
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-dnstest
spec:
  containers:
    - name: nginx
      image: nginx:1.19.2
      ports:
      - containerport: 80
