liveness-pod-http.yml
apiVersion: v1
kind: Pod
metadata:
  name: liveness-pod-http
spec:
  containers:
  - name: nginx
    image: nginx:1.19.1
    livenessProb:
      httpGet:
       path: /
       port: 80

      initialDelaySeconds: 5
      periodSecond: 5
