liveness-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: liveness-pod
spec:
  containers:
  - name: busybox
    image: busybox
    command: ['sh', '-c', 'while true; do sleep 3600; done']
    livenessProb:
      exec:
        command: ["echo", "Hellow, World!"]
      initialDelaySeconds: 5
      periodSecond: 5
