my-daemonset.yml
apiVersion: app/v1
kind: DaemonSet
metadata:
  name: my-daemonset
spec:
  selector:
    matchLabels:
      app: my-daemonset
  template:
    metadata:
    labels:
      app: my-daemonset
    spec:
      containers:
      - name: nginx
        image: nginx:1.19.1
