statup-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: statup-pod
spec:
  containers:
  - name: nginx
    image: nginx:1.19.1
    startupsProb:
      httpGet:
        path: /
        port: 80
      failureThreshold: 5
      periodSecond: 10
