my-networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: my-networkpolicy
  namespace: np-test
spec:
  podSelector:
   matchLabels:
     app: nginx
  policyTypes:
  - Ingress
  - Egress
